updated lab news

--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@ div.tocify {
 <p><br />
 </p>
 </div>
-<div id="lab-in-the-news" class="section level2">
-<h2><i class='fas fa-rss-square'></i> Lab in the News</h2>
+<div id="lab-news" class="section level2">
+<h2><i class='fas fa-rss-square'></i> Lab News</h2>
 <p><br />
 </p>
 <div id="demobox">
