--- a/about.html
+++ b/about.html
@@ -376,6 +376,7 @@ div.tocify {
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
+<body>
 <p><br />
 </p>
 <div id="principal-investigator" class="section level1">
@@ -469,6 +470,8 @@ div.tocify {
 <p>Currently, he is a NIH T32 post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Department of Biostatistics in the Mailmans School of Public Health</a> track.<br />
 In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
 <p><i class="fa fa-telegram"></i> <a href="mailto:%3Caa3832@cumc.columbia.edu%3E">Email</a></p>
+<a href="https://twitter.com/intent/tweet?button_hashtag=aabramov_md&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-related="ferrag02,lab_ferrari" data-show-count="false">Tweet #aabramov_md</a>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <p><br />
 </p>
 <p><img src="images/dov.jpg" style="width:25.0%" /></p>
