ended html with body end

--- a/about.html
+++ b/about.html
@@ -710,6 +710,7 @@ Director of the Advanced Cardiovascular Imaging Lab at the University of Pennsyl
 <p style="text-align:right;font-size:12px;">
 <em>Website built by A Abramov, Oct 2021</em>
 </p>
+</body>
 </div>
 </div>
 
