updated twitter to aabramov

--- a/about.html
+++ b/about.html
@@ -465,13 +465,9 @@ div.tocify {
 <p><img src="images/abramov.jpg" style="width:25.0%" /></p>
 <div id="alexey-abramov-md" class="section level4">
 <h4><em>Alexey Abramov, MD</em></h4>
-<p>Alexey is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> and received his medical degree from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a>.<br />
-</p>
-<p>Currently, he is a NIH T32 post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Department of Biostatistics in the Mailmans School of Public Health</a> track.<br />
-In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
+<p>Alexey is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> and received his medical degree from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a>. Currently, he is a NIH T32 post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Biostatistics in the Mailmans School of Public Health</a> track. In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
 <p><i class="fa fa-telegram"></i> <a href="mailto:%3Caa3832@cumc.columbia.edu%3E">Email</a></p>
-<a href="https://twitter.com/intent/tweet?button_hashtag=aabramov_md&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-related="ferrag02,lab_ferrari" data-show-count="false">Tweet #aabramov_md</a>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<p><i class="fa fa-twitter"></i> <a href="https://twitter.com/aabramov_MD">Twitter</a></p>
 <p><br />
 </p>
 <p><img src="images/dov.jpg" style="width:25.0%" /></p>
