updated esti twitter

--- a/about.html
+++ b/about.html
@@ -420,6 +420,8 @@ div.tocify {
 <em>(recommendations for mystery books welcome)</em></p>
 <p><i class="fa fa-book"></i> <a href="https://scholar.google.com/citations?hl=en&amp;user=02qHMNkAAAAJ">Google Scholar</a><br />
 </p>
+<p><i class="fa fa-twitter"></i> <a href="https://twitter.com/EstiCastillero">Twitter</a><br />
+</p>
 <p><br />
 </p>
 </div>
