updated about pages, esti and chiara

--- a/about.html
+++ b/about.html
@@ -411,8 +411,8 @@ div.tocify {
 <p><br />
 </p>
 <p><img src="images/esti.png" style="width:25.0%" /></p>
-<div id="esti-castillero-phd" class="section level4">
-<h4><em>Esti Castillero, PhD</em></h4>
+<div id="estibaliz-castillero-phd" class="section level4">
+<h4><em>Estibaliz Castillero, PhD</em></h4>
 <p>I am a Biomedical Researcher with a PhD in Physiology and Endocrinology. My research focuses on the study of the advanced stages of myocardial and cardiac valve remodeling. My research argues that cardiac remodeling is regulated both at a local and systemic level and that it may, in turn, affect remote tissues by endocrine crosstalk.<br />
 </p>
 <p>Currently, I am leading projects that explore myocardium-cardiac valve communication in the adaptation to ischemic injury and the role of circulating factors from the skeletal muscle in cardiac remodeling in end-stage heart failure.</p>
@@ -424,10 +424,17 @@ div.tocify {
 </p>
 <p><br />
 </p>
+<p><img src="images/Chiara.jpg" style="width:25.0%" /></p>
 </div>
 <div id="chiara-camillo-phd" class="section level4">
 <h4><em>Chiara Camillo, PhD</em></h4>
+<p>Dr. Camillo is a cellular biologist studying the molecular mechanisms that regulate endothelium and vascular morphogenesis. Broadly, her research focuses on translational and clinical approaches to studying cardiovascular diseases using both in vitro and in vivo models. Dr. Camillo is leading projects on thoracic aortic aneurysm development, focused on determining the impact of glycation products on cellular phenotype, extracellular matrix remodeling and aortic wall instability.</p>
+<p>“Sciences provide an understanding of a universal experience, Arts are a universal understanding of a personal experience… they are both a part of us and a manifestation of the same thing… the arts and sciences are avatars of human creativity” – Mae Jemison</p>
 <p><br />
+</p>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Ccc4418@cumc.columbia.edu%3E">Email</a><br />
+</p>
+<p><i class="fa fa-book"></i> <a href="https://orcid.org/0000-0001-8000-3188">ORCID</a><br />
 </p>
 <hr />
 <p><br />
