--- a/about.html
+++ b/about.html
@@ -470,7 +470,7 @@ div.tocify {
 <h3>Surgical Residents</h3>
 <p><br />
 </p>
-<p><img src="images/abramov.jpg" style="width:25.0%" /></p>
+<p><img src="images/Abramov.jpg" style="width:25.0%" /></p>
 <div id="alexey-abramov-md" class="section level4">
 <h4><em>Alexey Abramov, MD</em></h4>
 <p>Alexey is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> and received his MD from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a>. Currently, he is a NIH T32 post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the Biostatistics at the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Columbia University Mailman School of Public Health</a>. In his free time, he enjoys the outdoors, hiking, running, road cycling and skiing.</p>
